kubernetes/cloudsql-proxy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloudsql-proxy
  namespace: simplevat-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudsql-proxy
        unit: mycloudsql
    spec:
      containers:
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy", "--dir=/cloudsql",
              "-instances=simplevat-dev:us-central1:simplevat-dev-db=tcp:3306",
              "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
    # [END proxy_container]
  # [START volumes]
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: cloudsql
          emptyDir:
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
# [END volumes]
