kubernetes/simplevat-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simplevat
  name: simplevat-service-dev
  namespace: simplevat-dev
spec:
  ports:
    - nodePort: 30768
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: simplevat
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
